# histeventexplorer_pkg

./: .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  index.rst  make.bat
docs/source/: histeventexplorer_pkg.rst  modules.rst
src/histeventexplorer_pkg/: __init__.py  event_image_fetcher.py  event_trends.py  fetch_events.py
tests/: test_event_images.py  test_event_trends.py  test_fetch_events.py
vignette/: usage_vignette.ipynb
